--- a/css/ikigai.css
+++ b/css/ikigai.css
@@ -8,7 +8,6 @@
 
 .cuboctahedron__face--cube-front .nav-button{
     color: white;
-    z-index: 300;
 }
 
 .cuboctahedron__face--cube-front strong {
@@ -25,18 +24,24 @@
 
 
 /****************IKIGAI*************/
-.hero-image {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 auto;
+
+.hero-image-container {
     width: 1200px;
     max-width: 90rem;
     height: 1200px;
     position:absolute;
     top: 200px;
     left: 200px;
-    z-index: -1;
+    margin: 0 auto;
+    z-index:0;
+    
+
+}
+.hero-image {
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .circle {
