--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,7 @@ a:hover {
     position: relative;
     top: 0;
     width: 100%;
+    z-index: 10;
 }
 
 .main-header__title {
